[project]
name = "slackbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.6.0",
    "fastapi>=0.125.0",
    "httpx>=0.28.1",
    "openai>=2.13.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "slack-bolt>=1.27.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]
